--- a/manifests-openshift/deploy-acmeair-flightservice-java.yaml
+++ b/manifests-openshift/deploy-acmeair-flightservice-java.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: acmeair-flightservice-java
-        image: quay.io/mmondics/acmeair-flightservice-java-s390x:v1.0.0
+        image: docker.io/yigitpolat/acmeair-flightservice-java:latests
         ports:
           - containerPort: 9080
           - containerPort: 9443
