--- a/manifests-openshift/acmeair-flightservice-route.yaml
+++ b/manifests-openshift/acmeair-flightservice-route.yaml
@@ -2,6 +2,8 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: acmeair-flight-route
+  labels:
+    app.kubernetes.io/part-of: acmeair-flightservice
 spec:
   host: _HOST_
   path: /flight
