--- a/manifests-openshift/acmeair-flightservice-route.yaml
+++ b/manifests-openshift/acmeair-flightservice-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: acmeair-flight-route
   labels:
-    app.kubernetes.io/part-of: acmeair-flightservice
+    app.kubernetes.io/part-of: flight-service
 spec:
   host: _HOST_
   path: /flight
