--- a/manifests/deploy-acmeair-flightservice-java.yaml
+++ b/manifests/deploy-acmeair-flightservice-java.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: acmeair-flightservice-java
-        image: docker.io/yigitpolat/acmeair-flightservice-java:latests
+        image: docker.io/yigitpolat/acmeair-flightservice-java:latest
         ports:
           - containerPort: 9080
           - containerPort: 9443
