--- a/manifests-openshift/deploy-acmeair-flightservice-java.yaml
+++ b/manifests-openshift/deploy-acmeair-flightservice-java.yaml
@@ -84,7 +84,7 @@ spec:
         - name: acmeair-flight-db-2
           emptyDir: {}
       containers:
-      - image: mongo:latest
+      - image: mongo
         name: acmeair-flight-db
         ports:
         - containerPort: 27017
