--- a/manifests/deploy-acmeair-flightservice-java.yaml
+++ b/manifests/deploy-acmeair-flightservice-java.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: acmeair-flightservice-java
-        image: docker.io/abdouibm/acmeair-flightservice-java:latest
+        image: quay.io/abdouibm/acme-flightservice:latest
         ports:
           - containerPort: 9080
           - containerPort: 9443
