--- a/manifests-openshift/deploy-acmeair-flightservice-java.yaml
+++ b/manifests-openshift/deploy-acmeair-flightservice-java.yaml
@@ -89,7 +89,7 @@ spec:
         - name: acmeair-flight-db-2
           emptyDir: {}
       containers:
-      - image: mongo:latest
+      - image: quay.io/abdouibm/mongo:latest
         name: acmeair-flight-db
         ports:
         - containerPort: 27017
