--- a/manifests/deploy-acmeair-flightservice-java.yaml
+++ b/manifests/deploy-acmeair-flightservice-java.yaml
@@ -91,7 +91,7 @@ spec:
         name: acmeair-flight-db
     spec:
       containers:
-      - image: mongo:latest
+      - image: quay.io/abdouibm/mongo:latest
         name: acmeair-flight-db
         ports:
         - containerPort: 27017
