--- a/manifests-openshift/deploy-acmeair-flightservice-istio.yaml
+++ b/manifests-openshift/deploy-acmeair-flightservice-istio.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: acmeair-flightservice-java
-        image: quay.io/abdouibm/acme-flightservice-sec:latest
+        image: quay.io/abdouibm/acmeair-flightservice-java-3.3:new
         ports:
           - containerPort: 9080
           - containerPort: 9443
@@ -42,8 +42,18 @@ spec:
           value: password
         - name: MONGO_HOST
           value: acmeair-flight-db
-        - name: SECURE_SERVICE_CALLS
-          value: 'true'
+        - name: JAEGER_AGENT_HOST
+          value: jaeger-all-in-one-inmemory-agent
+        - name: JAEGER_AGENT_PORT
+          value: '6832'
+        - name: JAEGER_ENDPOINT
+          value: 'http://jaeger-all-in-one-inmemory-collector:14268/api/traces'
+        - name: ACCESS_LOGGING_ENABLED
+          value: 'false'
+        - name: TRACE_SPEC
+          value: '*=info'
+        - name: LOGGING_FORMAT
+          value: 'simple'
         readinessProbe:
           httpGet:
             path: /health
@@ -66,6 +76,7 @@ metadata:
 spec:
   ports:
     - port: 9080
+      name: HTTP
   selector:
     name: acmeair-flight-deployment
 ---
@@ -123,7 +134,7 @@ metadata:
     app.kubernetes.io/part-of: flight-service
 spec:
   ports:
-  - name: "27017"
+  - name: HTTP
     port: 27017
     protocol: TCP
     targetPort: 27017
